--- a/ch05/ExpressExample/package.json
+++ b/ch05/ExpressExample/package.json
@@ -9,6 +9,8 @@
   "author": "Ryan Yang",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "serve-static": "^1.13.2"
   }
 }
